#ifndef INDEXLABEL_HPP
#define INDEXLABEL_HPP

#include <QLabel>

class IndexLabel : public QLabel {
public:
	IndexLabel(int index);
};

#endif // INDEXLABEL_HPP
